# rust-battery-tester

./: .gitignore  Cargo.toml  diagram.json  package.json  partitions.csv  readme.md  sdkconfig.defaults  tsconfig.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.hooks/: post-checkout
chips/: at-modem.chip.c  at-modem.chip.json
docs/: README.md
scripts/: add-version.mjs  build.sh  edit-git-config.ts  elf2bin.sh  flash.sh  flash_monitor.sh  flash_view.sh  handle-git-version.ts  new-version.ts  run-wokwi.sh  run.ts
src/: .version  global_setttings.rs  main.rs  network.rs  tasks.rs
src/utils/: batty_monitor.rs  board.rs  display.rs  helper.rs  mod.rs  ota.rs  storagehanler.rs  watchdog.rs
templates/: .env.template  version.rs.template
